manifests/clusters/local/networking-config/local-test.gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: local-test
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: intermediate-ca
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 30080
      hostname: "local.test"
      allowedRoutes:
        namespaces:
          from: All
    - name: http-wildcard
      protocol: HTTP
      port: 30080
      hostname: "*.local.test"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 30443
      hostname: "local.test"
      tls:
        mode: Terminate
        certificateRefs:
          - name: local-gateway-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: https-wildcard
      protocol: HTTPS
      port: 30443
      hostname: "*.local.test"
      tls:
        mode: Terminate
        certificateRefs:
          - name: local-gateway-tls
      allowedRoutes:
        namespaces:
          from: All
