manifests/clusters/local/networking-config/local-test-redirect.httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: local-test-redirect
  namespace: default
spec:
  parentRefs:
    - name: local-test
      sectionName: http
    - name: local-test
      sectionName: http-wildcard
  hostnames:
    - local.test
    - "*.local.test"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
