manifests/clusters/local/networking-config/backups.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: backups
  namespace: backups
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - kube-apiserver
    - toFQDNs:
        - matchName: s3.cloud.test
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    - toEntities:
        - host
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "50000"
              protocol: TCP
