manifests/clusters/local/networking-config/observability.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: observability
  namespace: observability
spec:
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: observability
    - toEntities:
        - kube-apiserver
    - toEntities:
        - cluster
    # openobserve-collector agent scrapes kubelet + control-plane (metrics)
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "10250"   # kubelet
              protocol: TCP
            - port: "10257"   # kube-controller-manager
              protocol: TCP
            - port: "10259"   # kube-scheduler
              protocol: TCP
    # openobserve writes parquet data to rustfs (companion haproxy :80, velero pattern)
    - toFQDNs:
        - matchName: s3.cloud.test
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    - toFQDNs:
        - matchName: smtp.cloud.test
      toPorts:
        - ports:
            - port: "25"
              protocol: TCP
