manifests/clusters/local/networking-config/scanning.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: scanning
  namespace: scanning
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - kube-apiserver
    - toFQDNs:
        - matchName: registry.cloud.test
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: scanning
      toPorts:
        - ports:
            - port: "4954"
              protocol: TCP
