manifests/clusters/local/networking-config/secrets.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: secrets
  namespace: secrets
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - kube-apiserver
    - toFQDNs:
        - matchName: secrets.cloud.test
      toPorts:
        - ports:
          - port: "80"
            protocol: TCP
